--- a/css/main.css
+++ b/css/main.css
@@ -801,6 +801,12 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: var(--active);
   border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
 }
 .footer-form-btn:active {
   background-color: #188CE8;
